--- a/src/components/Hero/HeroStyles.module.css
+++ b/src/components/Hero/HeroStyles.module.css
@@ -15,7 +15,7 @@
     height: auto;
     margin: 0 auto;
     border-radius: 20rem;
-    border: 5px solid var(--containers);
+    border: 5px solid var(--dark-container-bg-color);
 }
 
 .info {
@@ -41,11 +41,11 @@
 .title{
     max-width: 24ch;
     align-self: center;
-    color: var(--primary-color);
+    color: var(--dark-accent-color);
 }
 
 .description {
     max-width: 24ch;
     align-self: center;
-    color: var(--text-color);
+    color: var(--dark-text-color);
 }
