--- a/src/components/Hero/HeroStyles.module.css
+++ b/src/components/Hero/HeroStyles.module.css
@@ -6,12 +6,14 @@
     text-align: center;
     height: 100vh;
     min-height: 500px;
+    width: 100vw;
     align-items: center;
-    width: 100%;
+    background-color: var(--dark-bg-color);
 }
 
 .hero {
     width: 100%;
+    max-width: 100%;
     height: auto;
     margin: 0 auto;
     border-radius: 20rem;
