--- a/src/components/Projects/ProjectsStyles.module.css
+++ b/src/components/Projects/ProjectsStyles.module.css
@@ -4,6 +4,7 @@
     gap: 20px;
     align-items: center;
     background-color: var(--light-bg-color);
+    padding-bottom: 20px;
 }
 
 .projectContainer {
@@ -13,6 +14,7 @@
     width: 80%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     background-color: var(--light-container-bg-color);
+    margin-bottom: 20px;
 }
 
 .projectTitle {
