--- a/src/components/Hero/HeroStyles.module.css
+++ b/src/components/Hero/HeroStyles.module.css
@@ -51,3 +51,17 @@
     align-self: center;
     color: var(--dark-text-color);
 }
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .hero {
+        width: 80%;
+        max-width: 300px;
+        height: auto;
+        margin: 0 auto;
+    }
+}
