--- a/src/components/Skills/SkillsStyles.module.css
+++ b/src/components/Skills/SkillsStyles.module.css
@@ -51,3 +51,12 @@
     text-align: center;
     font-family: 'IBM Plex Sans', sans-serif;
 }
+
+
+
+@media (max-width: 768px) {
+    .gridContainer {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, auto);
+    }
+}
