style: improve hero design

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     /* Dark Theme Variables */
     --dark-bg-color: #1e3a33;
     --dark-text-color: #fdfdfd;
-    --dark-accent-color: #dfa831;
+    --dark-accent-color: #15c535;
     --dark-link-color: #00c2ff;
     --dark-container-bg-color: #22292f;
 
