--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,15 @@
     --dark-link-color: #00c2ff;
     --dark-container-bg-color: #22292f;
 
+
     /* Light Theme Variables */
     --light-bg-color: #f0eee9;
     --light-text-color: #000000;
     --light-accent-color: #177d00;
     --light-link-color: #005be9;
     --light-container-bg-color: #cccccc;
+
+    --navbar-color: #165b45;
 }
 
 * {
