--- a/src/components/Navbar/NavbarStyles.module.css
+++ b/src/components/Navbar/NavbarStyles.module.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: rgb(22 91 69);
+    background-color: var(--navbar-color);
     position: fixed;
     width: 100%;
     top: 0;
@@ -9,6 +9,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.logo {
+    font-size: 1.25rem;
+    color: var(--dark-text-color);
+    padding-left: 1rem;
 }
 
 .navList {
@@ -25,6 +31,7 @@
 
 .navRight {
     display: flex;
+    align-items: center;
 }
 
 .navItem {
@@ -55,4 +62,63 @@
 .navLink:hover::before {
     height: 100%;
     cursor: pointer;
+}
+
+.hamburger {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 1rem;
+    z-index: 1100;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: #FFF;
+    margin: 4px 0;
+    transition: 0.3s;
+}
+
+.mobileMenu {
+    position: fixed;
+    top: 0;
+    right: -250px;
+    width: 250px;
+    height: 100vh;
+    background-color: var(--dark-bg-color);
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
+    transition: right 0.3s;
+    z-index: 999;
+    overflow-y: auto;
+}
+
+.mobileMenuOpen {
+    right: 0;
+}
+
+.mobileNavList {
+    list-style: none;
+    padding: 2rem;
+    margin: 0;
+}
+
+.mobileNavItem {
+    margin: 1rem 0;
+}
+
+.menuOpen {
+    display: flex;
+}
+
+@media (max-width: 768px) {
+    .navList {
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
 }
