style: improve projects section

--- a/src/components/Footer/FooterStyles.module.css
+++ b/src/components/Footer/FooterStyles.module.css
@@ -1,6 +1,6 @@
 .container {
     text-align: center;
-    background-color: #052b1a;
+    background-color: var(--footer-color);
     height: 70px;
     align-content: center;
 }
