--- a/pages/Home/HomeStyles.module.css
+++ b/pages/Home/HomeStyles.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     gap: 20px;
     text-align: center;
-    height: calc(100vh - 70px);
+    height: calc(100dvh - 70px);
     min-height: 500px;
     width: 100vw;
     align-items: center;
@@ -82,5 +82,9 @@
     .container {
         flex-direction: column;
         align-items: center;
+    }
+
+    .info{
+        margin-top: 50px;
     }
 }
