--- a/src/components/Navbar/NavbarStyles.module.css
+++ b/src/components/Navbar/NavbarStyles.module.css
@@ -56,7 +56,7 @@
     bottom: 0;
     content: '';
     background: #FFF;
-    opacity: 0.3;
+    opacity: 0.5;
     transition: height 0.3s, opacity 0.3s;
 }
 
@@ -103,11 +103,12 @@
 .mobileNavList {
     list-style: none;
     padding: 2rem;
-    margin: 0;
+    margin-top: 30px;
 }
 
 .mobileNavItem {
-    margin: 1rem 0;
+    font-size: 1.4rem;
+    margin-bottom: 30px;
 }
 
 .menuOpen {
