--- a/pages/Home/HomeStyles.module.css
+++ b/pages/Home/HomeStyles.module.css
@@ -55,19 +55,30 @@
     display: flex;
     gap: 25px;
     justify-content: center;
+    overflow: visible;
+    align-items: center;
 }
 
 .socialMedia a {
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: var(--text-color);
+    transition: all 0.3s ease;
+}
+
+.socialMedia a:hover .icon {
+    transform: scale(1.1);
+}
+
+.socialMedia a:hover .label {
+    text-decoration: underline;
 }
 
 .icon {
     width: 45px;
     transition: transform 0.3s ease, filter 0.3s ease;
-}
-
-.icon:hover {
-    transform: scale(1.1);
 }
 
 .ctaButtons {
@@ -91,7 +102,6 @@
     font-weight: 600;
     text-transform: uppercase;
     width: 175px;
-
 }
 
 .ctaButtons .button:hover {
