--- a/pages/Home/HomeStyles.module.css
+++ b/pages/Home/HomeStyles.module.css
@@ -24,6 +24,7 @@
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
     margin-top: 80px;
     margin-bottom: 20px;
+    border: 1px solid #ccc;
 }
 
 .title {
