--- a/pages/Projects/ProjectsStyles.module.css
+++ b/pages/Projects/ProjectsStyles.module.css
@@ -6,7 +6,7 @@
     background: linear-gradient(135deg, #024637, #034323, #025f49);
     padding-top: 50px;
     position: relative;
-    height: calc(100dvh - 70px);
+    min-height: calc(100dvh - 70px);
     width: 100vw;
     color: var(--text-color);
 }
