--- a/pages/About/AboutStyles.module.css
+++ b/pages/About/AboutStyles.module.css
@@ -33,7 +33,7 @@
     grid-template-areas:
         "profile bio"
         "skills certifications"
-        "skills resume"
+        "skills quotes"
         "skills ."
         "skills .";
 }
@@ -156,18 +156,6 @@
     object-fit: contain;
 }
 
-.resumeContainer {
-    background-color: var(--container-bg-color);
-    border-radius: 12px;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
-    border: 1px solid #ccc;
-    padding: 20px;
-    grid-area: resume;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .containerTitle {
     font-size: 2rem;
     color: var(--text-color);
@@ -211,6 +199,39 @@
     text-decoration: underline;
 }
 
+.quotesContainer {
+    background-color: var(--container-bg-color);
+    border-radius: 12px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    grid-area: quotes;
+    border: 1px solid #ccc;
+}
+
+.quoteList {
+    list-style: none;
+    padding-left: 0;
+}
+
+.quoteItem {
+    background-color: rgba(204, 204, 204, 0.09);
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    text-align: left;
+    border: 1px solid rgba(205, 205, 205, 0.16);
+}
+
+.quoteText {
+    font-style: italic;
+}
+
+.quoteAuthor {
+    text-align: right;
+    font-weight: 700;
+    font-size: 1.1rem;
+}
+
 @media (max-width: 915px) {
     .contentContainer {
         grid-template-columns: 1fr;
@@ -220,7 +241,7 @@
             "bio"
             "skills"
             "certifications"
-            "resume";
+            "quotes";
     }
 }
 
