--- a/pages/About/AboutStyles.module.css
+++ b/pages/About/AboutStyles.module.css
@@ -3,11 +3,12 @@
     flex-direction: column;
     gap: 20px;
     align-items: center;
-    background: linear-gradient(135deg, #024637, #034323, #025f49);
+    background: url("/src/assets/background.png") no-repeat top center fixed;
+    background-size: cover;
     padding-top: 50px;
     padding-bottom: 50px;
     position: relative;
-    min-height: calc(100dvh - 70px);
+    min-height: calc(100vh - 40px);
     width: 100vw;
     color: var(--text-color);
 }
@@ -19,7 +20,6 @@
     font-size: 3rem;
     text-align: center;
     flex-shrink: 0;
-    text-decoration: underline;
 }
 
 .contentContainer {
@@ -246,6 +246,10 @@
 }
 
 @media (max-width: 768px) {
+    .about{
+        min-height: calc(100svh - 40px);
+    }
+
     .title {
         font-size: 2.5rem;
     }
