--- a/pages/Home/HomeStyles.module.css
+++ b/pages/Home/HomeStyles.module.css
@@ -5,12 +5,12 @@
     gap: 20px;
     text-align: center;
     height: auto;
-    min-height: calc(100dvh - 70px);
+    min-height: calc(100vh - 40px);
     width: 100vw;
     align-items: center;
-    background: url("/src/assets/background.svg");
-    position: relative;
+    background: url("/src/assets/background.png") no-repeat top center fixed;
     background-size: cover;
+    position: relative;
 }
 
 .info {
@@ -21,7 +21,6 @@
     padding: 20px;
     background-color: var(--container-bg-color);
     border-radius: 12px;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
     margin-top: 80px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -115,8 +114,7 @@
 
 @media screen and (max-width: 768px) {
     .title {
-        font-size: 3.5rem;
-        max-width: 7ch;
+        font-size: 2rem;
     }
 
     .description {
@@ -126,16 +124,17 @@
     .container {
         flex-direction: column;
         align-items: center;
+        min-height: calc(100svh - 40px);
     }
 
     .ctaButtons {
         flex-direction: column;
-        gap: 15px;
+        gap: 20px;
+        align-items: center;
     }
 
     .ctaButtons .button {
-        width: 100%;
         padding: 12px 0;
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 }
