--- a/pages/Projects/ProjectsStyles.module.css
+++ b/pages/Projects/ProjectsStyles.module.css
@@ -3,10 +3,11 @@
     flex-direction: column;
     gap: 20px;
     align-items: center;
-    background: linear-gradient(135deg, #024637, #034323, #025f49);
+    background: url("/src/assets/background.png") no-repeat top center fixed;
+    background-size: cover;
     padding-top: 50px;
     position: relative;
-    min-height: calc(100dvh - 70px);
+    min-height: calc(100vh - 40px);
     width: 100vw;
     color: var(--text-color);
 }
@@ -56,7 +57,6 @@
     font-size: 3rem;
     text-align: center;
     flex-shrink: 0;
-    text-decoration: underline;
 }
 
 .languagesContainer {
@@ -81,6 +81,10 @@
 }
 
 @media (max-width: 768px) {
+    .project {
+        min-height: calc(100svh - 40px);
+    }
+
     .projectsGrid {
         grid-template-columns: 1fr;
     }
