--- a/src/components/Footer/FooterStyles.module.css
+++ b/src/components/Footer/FooterStyles.module.css
@@ -1,11 +1,12 @@
 .container {
     text-align: center;
     background-color: var(--footer-color);
-    height: 70px;
+    border-top: 1px solid #454545;
+    height: 40px;
     align-content: center;
 }
 
 .container p{
-    font-size: 18px;
+    font-size: 12px;
     color: #ffffff;
 }
