--- a/src/components/Navbar/NavbarStyles.module.css
+++ b/src/components/Navbar/NavbarStyles.module.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #e9e9e9;
 }
 
 .logo {
@@ -122,5 +123,9 @@
 
     .hamburger {
         display: block;
+    }
+
+    .logo {
+        font-size: 1rem;
     }
 }
