--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
     --container-bg-color: #232323;
     --navbar-color: #2A2D2CFF;
     --sidebar-color: #165b45;
-    --footer-color: #052b1a;
+    --footer-color: #000000;
 }
 
 * {
@@ -14,6 +14,10 @@
     padding: 0;
     box-sizing: border-box;
     overflow-x: hidden;
+}
+
+html, body {
+    height: 100%;
 }
 
 body {
