--- a/pages/Home/HomeStyles.module.css
+++ b/pages/Home/HomeStyles.module.css
@@ -8,7 +8,7 @@
     min-height: calc(100vh - 40px);
     width: 100vw;
     align-items: center;
-    background: url("/src/assets/background.png") no-repeat top center fixed;
+    background: url("/src/assets/background.webp") no-repeat top center fixed;
     background-size: cover;
     position: relative;
 }
