--- a/src/pages/NotFound/NotFoundStyles.module.css
+++ b/src/pages/NotFound/NotFoundStyles.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     background: linear-gradient(135deg, #024637, #034323, #025f49);
     position: relative;
-    min-height: calc(100dvh - 70px);
+    min-height: calc(100vh - 40px);
     width: 100vw;
     color: var(--text-color);
     padding: 50px 20px;
@@ -68,6 +68,10 @@
 }
 
 @media (max-width: 768px) {
+    .notFound{
+        min-height: calc(100svh - 40px);
+    }
+
     .title {
         font-size: 2.5rem;
     }
