--- a/src/components/Navbar/NavbarStyles.module.css
+++ b/src/components/Navbar/NavbarStyles.module.css
@@ -17,6 +17,12 @@
     color: var(--text-color);
     padding-left: 1rem;
     cursor: default;
+    text-decoration: none;
+}
+
+.logo:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .navList {
