--- a/src/pages/Home/HomeStyles.module.css
+++ b/src/pages/Home/HomeStyles.module.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-width: 500px;
+    width: 550px;
     padding: 20px;
     background-color: var(--container-bg-color);
     border-radius: 12px;
@@ -27,14 +27,14 @@
 }
 
 .title {
-    font-size: 5rem;
+    font-size: 4rem;
     align-self: center;
     color: var(--text-color);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .description {
-    max-width: 24ch;
+    max-width: 32ch;
     align-self: center;
     color: var(--text-color);
     font-size: 1.2rem;
@@ -113,12 +113,17 @@
 }
 
 @media screen and (max-width: 768px) {
+    .info{
+        width: auto;
+    }
+
     .title {
         font-size: 2rem;
     }
 
     .description {
         font-size: 1rem;
+        max-width: 24ch;
     }
 
     .container {
