--- a/src/pages/Home/HomeStyles.module.css
+++ b/src/pages/Home/HomeStyles.module.css
@@ -112,6 +112,11 @@
 }
 
 @media (max-width: 768px) {
+    :root:has(.home) {
+        overflow: hidden;
+        height: 100vh;
+    }
+
     .home {
         flex-direction: column;
         align-items: center;
