feat: redesign navbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
     /* Layout & Backgrounds */
     --background: #1d1e20;       /* Main page background */
     --navbar: #232323;           /* Top navigation bar */
-    --sidebar: #165b45;          /* Side navigation/menu */
+    --sidebar: #1a1b1d;          /* Side navigation/menu */
     --footer: #000000;           /* Bottom footer area */
 
     /* Typography */
