--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@
     box-sizing: border-box;
 }
 
+[id] {
+    scroll-margin-top: 4.5rem;
+}
+
 html, body {
     height: 100%;
     font-family: 'Poppins', sans-serif;
@@ -67,5 +71,9 @@ p {
 
     p {
         font-size: 1rem;
+    }
+
+    [id] {
+        scroll-margin-top: 4rem;
     }
 }
